--- a/public/css/style.css
+++ b/public/css/style.css
@@ -486,8 +486,8 @@ pre {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px; }
+  margin-right: 0%; /*used to be -15px for both left and right*/
+  margin-left: 0%; }
 
 .no-gutters {
   margin-right: 0;
@@ -7503,7 +7503,7 @@ h1, h2, h3, h4, h5,
 .block-11 .owl-nav .owl-prev, .block-11 .owl-nav .owl-next {
   display: inline-block;
   padding: 20px;
-  font-size: 45px;
+  font-size: 35px;
   top: 35%;
 }
 
