Added autoplay and nav dots to recent events. Modified events description.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8470,6 +8470,29 @@ textarea.form-control {
     .block-4 .nonloop .owl-dots .owl-dot.active {
       background: #912c2e; }
 
+
+      .block-11 .owl-dots {
+        bottom: -40px;
+        position: absolute;
+        width: 100%;
+        text-align: center; }
+        .block-11 .owl-dots .owl-dot {
+          display: inline-block;
+          width: 8px;
+          height: 8px;
+          background: #ccc;
+          border-radius: 50%;
+          margin-right: 10px;
+          margin-bottom: 10px;
+          -webkit-transition: .3s all ease;
+          -o-transition: .3s all ease;
+          transition: .3s all ease; }
+          .block-11 .owl-dots .owl-dot.active {
+            background: #912c2e; }
+
+
+
+
 .contact-section {
   margin-top: -250px; }
   .contact-section .container {
